[package]
name = "mclient"
version = "0.1.0"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
repository = "https://github.com/yanfenglee/mclient"
documentation = "https://docs.rs/mclient"
authors = ["yanfeng.li <86966524@qq.com>"]
description = "macro based http client"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit-mut"] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

#serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"

http = "0.2"
url = "2.2"
bytes = "1.0"

[dev-dependencies]
rustversion = "1.0"
tracing = "0.1.14"
tracing-attributes = "0.1.8"
tracing-futures = "0.2"
trybuild = { version = "1.0.19", features = ["diff"] }

hyper = { version = "0.14", default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server"] }


[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "post"
path = "examples/post.rs"
