[package]
name = "mclient"
version = "0.1.2"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
repository = "https://github.com/yanfenglee/mclient"
documentation = "https://docs.rs/mclient"
authors = ["yanfeng.li <86966524@qq.com>"]
description = "macro based http client"
readme = "README.md"
license = "MIT"
edition = "2018"


[dependencies]
mclient_macro = {version = "0.1.2", path = "mclient_macro"}

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

#serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"

http = "0.2"
url = "2.2"
bytes = "1.0"
regex = "1.4"

[dev-dependencies]

hyper = { version = "0.14", default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server"] }


[[example]]
name = "post"
path = "examples/post.rs"
